<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:capitalize="words"
        android:maxLines="1"
        android:summary="@string/pref_description_about_version"
        android:title="@string/pref_title_about_version" />

    <Preference
        android:capitalize="words"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:summary="@string/pref_description_about_copyright"
        android:title="@string/pref_title_about_copyright" />

    <Preference
        android:capitalize="words"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:summary="@string/pref_description_about_source"
        android:title="@string/pref_title_about_source" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/erezwanderman/WalletKeysExplorer" />
    </Preference>

    <PreferenceCategory android:title="@string/pref_group_about_contact">

        <Preference
            android:capitalize="words"
            android:maxLines="1"
            android:summary="@string/pref_description_about_contact_facebook"
            android:title="@string/pref_title_about_contact_facebook" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.facebook.com/Wallet-Keys-Explorer-185260345364975" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_group_about_os_credits">

        <Preference
            android:capitalize="words"
            android:maxLines="1"
            android:summary="@string/pref_description_about_os_credits_bitcoinj"
            android:title="@string/pref_title_about_os_credits_bitcoinj" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://bitcoinj.github.io" />
        </Preference>

        <Preference
            android:capitalize="words"
            android:maxLines="1"
            android:summary="@string/pref_description_about_os_credits_bitcoin_wallet"
            android:title="@string/pref_title_about_os_credits_bitcoin_wallet" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/bitcoin-wallet/bitcoin-wallet" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
